--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: clipboard_watcher
 description: This plugin allows Flutter desktop apps to watch clipboard changes.
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/leanflutter/clipboard_watcher
 
 platforms:
+  linux:
   macos:
   windows:
 
@@ -23,6 +24,8 @@ dev_dependencies:
 flutter:
   plugin:
     platforms:
+      linux:
+        pluginClass: ClipboardWatcherPlugin
       macos:
         pluginClass: ClipboardWatcherPlugin
       windows:
