Add iOS support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,4 +30,5 @@ flutter:
         pluginClass: ClipboardWatcherPlugin
       windows:
         pluginClass: ClipboardWatcherPlugin
-
+      ios:
+        pluginClass: ClipboardWatcherPlugin
