--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
+
+  dependency_validator: ^3.0.0
 
 flutter:
   plugin:
