--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ platforms:
   linux:
   macos:
   windows:
+  ios:
+  android:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -32,4 +34,8 @@ flutter:
         pluginClass: ClipboardWatcherPlugin
       windows:
         pluginClass: ClipboardWatcherPlugin
-
+      ios:
+        pluginClass: ClipboardWatcherPlugin
+      android:
+        pluginClass: ClipboardWatcherPlugin
+        package: clipboard.watcher
