--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: clipboard_watcher
-description: This plugin allows Flutter desktop apps to watch clipboard changes.
-version: 0.1.3
+description: This plugin allows Flutter apps to watch clipboard changes.
+version: 0.2.0
 homepage: https://github.com/leanflutter/clipboard_watcher
 
 platforms:
