--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: clipboard_watcher
 description: This plugin allows Flutter apps to watch clipboard changes.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/leanflutter/clipboard_watcher
 
 platforms:
@@ -11,19 +11,18 @@ platforms:
   android:
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=2.5.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  dependency_validator: ^3.2.3
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-
-  dependency_validator: ^3.0.0
+  mostly_reasonable_lints: ^0.1.1
 
 flutter:
   plugin:
