--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: clipboard_watcher
 description: This plugin allows Flutter apps to watch clipboard changes.
-version: 0.2.1
+version: 0.3.0
 homepage: https://github.com/leanflutter/clipboard_watcher
 
 platforms:
@@ -20,9 +20,9 @@ dependencies:
 
 dev_dependencies:
   dependency_validator: ^3.2.3
-  flutter_test:
-    sdk: flutter
-  mostly_reasonable_lints: ^0.1.1
+  # flutter_test:
+  #   sdk: flutter
+  mostly_reasonable_lints: ^0.1.2
 
 flutter:
   plugin:
